--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@jest/globals": "^29.4.3",
     "@types/node": "^18.14.1",
-    "@types/validator": "^13.7.12"
+    "@types/validator": "^13.7.12",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5"
   },
   "dependencies": {
     "pg": "^8.9.0",
