--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
     "@types/node": "^18.14.1",
     "@types/validator": "^13.7.12",
     "jest": "^29.4.3",
+    "prettier": "^2.8.4",
     "ts-jest": "^29.0.5"
   },
   "dependencies": {
