Added deleting tables from DB(upgrade/downgrade)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["es5", "es6", "dom", "dom.iterable"],
     "target": "es2017",                                
     "experimentalDecorators": true,                   
     "emitDecoratorMetadata": true,                   
