--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.0",
+    "sequelize-cli": "^6.6.0",
     "sequelize-typescript": "^2.1.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
