--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "lib": ["es5", "es6", "dom", "dom.iterable"],
-    "target": "es2017",                                
+    "target": "ES2022",                                
     "experimentalDecorators": true,                   
     "emitDecoratorMetadata": true,                   
-    "module": "commonjs",                                
+    "module": "CommonJS",                                
     "forceConsistentCasingInFileNames": true,          
     "strict": true,                                     
     "skipLibCheck": true,
