--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
     "lib": ["es5", "es6", "dom", "dom.iterable"],
-    "target": "ES2022",                                
+    "target": "ES2022",                               
     "experimentalDecorators": true,                   
     "emitDecoratorMetadata": true,                   
-    "module": "CommonJS",                                
+    "module": "CommonJS",    
+    "outDir": "dist",                            
     "forceConsistentCasingInFileNames": true,          
     "strict": true,                                     
     "skipLibCheck": true,
-    "sourceMap": true                             
+    "sourceMap": true,
+    "declaration": true,                    
   },
 }
