Readme.md fixes

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "sequelize-postgres-auto-migrations",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "author": "Anatoliy Golikov",
   "main": "./dist/src/common/auto-migrations.js",
   "types": "./src/common/auto-migrations.ts",
   "type":"commonjs",
+  "keywords": ["postgres", "postgresql", "sequelize", "sequelize-typescript", "orm", "database", "db"],
   "scripts": {
     "test": "jest",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
